# cbdumas.com

./: .gitignore  personalSite.cabal
app/: site.hs
personal_site/: .gitignore  .site.hs.swo  blog-site.cabal  contact.markdown  index.html
personal_site/css/: default.css
personal_site/posts/: church_encoding.markdown  church_encoding2.markdown
personal_site/templates/: default.html
