name:                personalSite
version:             0.1.0.0
synopsis:            Hakyll project for my personal webiste
description:         Please see README.md
homepage:            www.cbdumas.com
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable site-exe
  hs-source-dirs:      app
  main-is:             site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hakyll
  default-language:    Haskell2010

source-repository head
  type:     git
--  location: https://github.com/githubuser/hakyll-template
